--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apexcharts": "^3.36.1",
     "axios": "^1.1.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.3.0",
